# src/meson.build

executable('hello',
          ['hello-world/main.cpp','hello-world/hi.cpp'],
          include_directories: incdir,
          install: true
          )

executable('dog', 'dog-age/main.cpp', install: true)
executable('add', 'addition/main.cpp', install: true)
executable('var', 'variable/main.cpp', install: true)
